<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".common">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:ignore="UselessParent">
    <!-- TODO: Update blank fragment layout -->
    <Button
        android:layout_width="240dp"
        android:text="@string/engineering_mathematics_1"
        android:layout_height="40dp"
        android:id="@+id/math1"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/engineering_mathematics_2"
        android:layout_height="40dp"
        android:id="@+id/math2"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/applied_chemistry"
        android:layout_height="40dp"
        android:id="@+id/chem"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/applied_physics_1"
        android:layout_height="40dp"
        android:id="@+id/phy1"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/applied_physics_2"
        android:layout_height="40dp"
        android:id="@+id/phy2"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/feee"
        android:layout_height="40dp"
        android:id="@+id/feee"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/intro_to_it_system"
        android:layout_height="40dp"
        android:id="@+id/its"/>
    <Button
        android:layout_width="240dp"
        android:text="@string/communication_skills"
        android:layout_height="40dp"
        android:id="@+id/cs"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="240dp"
        android:text="@string/engineering_graphics"
        android:layout_height="40dp"
        android:id="@+id/graphics"/>


    <Button
        android:id="@+id/mech"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/engineering_mechanics" />
</LinearLayout>

</FrameLayout>