<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:layout_width="350dp"
            android:layout_height="67dp"
            android:text="@string/welcome_to_lipi_by_the_era_engineers_choose_your_requirement_for_your_notes_or_syllabus"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/lipi" />


        <Button
            android:id="@+id/syllabus"
            android:layout_width="285dp"
            android:layout_height="92dp"
            android:layout_margin="35dp"
            android:layout_marginStart="46dp"
            android:text="@string/syllabus"
            android:textSize="25sp" />

        <Button
            android:id="@+id/notes"
            android:layout_width="262dp"
            android:layout_height="95dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="10dp"
            android:text="@string/notes"
            android:textSize="25sp" />

    </LinearLayout>

</FrameLayout>